--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -1,23 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{C63865DF-9C65-4BD0-AE3F-61964CC2890C}</ProjectGuid>
+        <ProjectGuid>{ECC2126B-8D6C-4731-A5CD-029F3A4A886C}</ProjectGuid>
         <OutputType>Exe</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>SFDX</RootNamespace>
-        <AssemblyName>SFDX</AssemblyName>
+        <RootNamespace>Editor</RootNamespace>
+        <AssemblyName>Editor</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <LangVersion>default</LangVersion>
+        <Deterministic>true</Deterministic>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
         <DebugSymbols>true</DebugSymbols>
         <OutputPath>bin\x86\Debug\</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
+        <DefineConstants>TRACE;DEBUG</DefineConstants>
         <DebugType>full</DebugType>
         <PlatformTarget>x86</PlatformTarget>
         <LangVersion>default</LangVersion>
@@ -26,32 +25,35 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
         <OutputPath>bin\x86\Release\</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
+        <DefineConstants>
+        </DefineConstants>
         <Optimize>true</Optimize>
         <DebugType>pdbonly</DebugType>
         <PlatformTarget>x86</PlatformTarget>
-        <LangVersion>default</LangVersion>
+        <LangVersion>7.3</LangVersion>
         <ErrorReport>prompt</ErrorReport>
         <Prefer32Bit>true</Prefer32Bit>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="System">
-            <Private>False</Private>
-        </Reference>
+        <ProjectReference Include="..\FNA\FNA.csproj">
+            <Project>{35253ce1-c864-4cd3-8249-4d1319748e8f}</Project>
+            <Name>FNA</Name>
+        </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="..\SharedAssemblyInfo.cs">
-            <Link>Properties\SharedAssemblyInfo.cs</Link>
-        </Compile>
+        <Compile Include="Colors\ColorDatabase.cs"/>
+        <Compile Include="Colors\ColorPalette.cs"/>
+        <Compile Include="Colors\ColorPaletteDatabase.cs"/>
+        <Compile Include="Data\DataNode.cs"/>
+        <Compile Include="Data\Parser.cs"/>
+        <Compile Include="Data\Reader.cs"/>
+        <Compile Include="Content\Item.cs"/>
+        <Compile Include="Content\ItemPart.cs"/>
+        <Compile Include="Misc\Items.cs"/>
+        <Compile Include="Pipeline\ItemContentReader.cs"/>
+        <Compile Include="Pipeline\ItemData.cs"/>
+        <Compile Include="Pipeline\ItemExporter.cs"/>
         <Compile Include="Program.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
-    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-             Other similar extension points exist, see Microsoft.Common.targets.
-        <Target Name="BeforeBuild">
-        </Target>
-        <Target Name="AfterBuild">
-        </Target>
-        -->
 </Project>
