--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,16 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Custom
+.idea
+SFR/build.bat
+
 # User-specific files
 *.rsuser
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-*.snk
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -35,7 +38,6 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
-.idea/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
