Upgraded Scripting API. Now user scripts are compiled in latest C# version.

--- a/SFR/App.config
+++ b/SFR/App.config
@@ -9,6 +9,10 @@
                 <bindingRedirect oldVersion="1.0.8107.30539" newVersion="1.0.0.0"/>
                 <codeBase version="1.0.0.0" href="SFR/Core.dll"/>
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
 </configuration>
