--- a/SFDX/SFDX.csproj
+++ b/SFDX/SFDX.csproj
@@ -25,7 +25,7 @@
         <PlatformTarget>x86</PlatformTarget>
         <LangVersion>default</LangVersion>
         <ErrorReport>prompt</ErrorReport>
-        <Prefer32Bit>true</Prefer32Bit>
+        <Prefer32Bit>false</Prefer32Bit>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
         <OutputPath>bin\x86\Release\</OutputPath>
@@ -35,7 +35,7 @@
         <PlatformTarget>x86</PlatformTarget>
         <LangVersion>default</LangVersion>
         <ErrorReport>prompt</ErrorReport>
-        <Prefer32Bit>true</Prefer32Bit>
+        <Prefer32Bit>false</Prefer32Bit>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System">
