--- a/SFR/App.config
+++ b/SFR/App.config
@@ -9,6 +9,26 @@
                 <bindingRedirect oldVersion="1.0.8107.30539" newVersion="1.0.0.0"/>
                 <codeBase version="1.0.0.0" href="SFR/Core.dll"/>
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Mono.Cecil" publicKeyToken="50cebf1cceb9d05e" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-0.11.5.0" newVersion="0.11.5.0"/>
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="MonoMod.Backports" publicKeyToken="null" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0"/>
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="MonoMod.Core" publicKeyToken="null" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0"/>
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="MonoMod.ILHelpers" publicKeyToken="null" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-1.0.1.0" newVersion="1.0.1.0"/>
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="MonoMod.Utils" publicKeyToken="null" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-25.0.3.0" newVersion="25.0.3.0"/>
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
 </configuration>
