--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,10 @@ jobs:
     # Build solution
     - name: Build Solution
       run: msbuild $env:Solution_Name /t:build /p:configuration=${{ matrix.configuration }}
+
+    - name: Upload
+    - uses: actions/upload-artifact@v4
+      with:
+        name: SFR ${{ matrix.configuration }}
+        path: "*.exe"
+        compression-level: 9 
